# keyboard

./: Cargo.toml  Makefile.toml  build.rs  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: definition.json  main.rs  right.rs
