[package]
name = "goose"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "b8be126" }

rumcake = { git = "https://github.com/Univa/rumcake", rev = "e406fbf", features = [
  "usb",
  "nrf52840",
  # "nrf-ble",
] }

[profile.dev]
debug = 2

[profile.release]
debug = 2
lto = true

[[bin]]
name = "central"
path = "src/main.rs"
required-features = ["rumcake/usb"]

[[bin]]
name = "right"
path = "src/right.rs"
required-features = ["rumcake/split-peripheral"]
